0617 自動啟動了

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,4 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
-DefaultLoadFile = anvoca_sm_ancova.csv
+DefaultLoadFile = reg.csv
+SubgroupDiscoveryAutoStart = true
