--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
-DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = reg.csv
 AutoStartSubgroupDiscovery = true
 ;AutoExit = true
