0618 要修改預設的選擇時間...

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,7 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
 ;DefaultLoadFile = anvoca_sm_ancova.csv
+DefaultLoadFile = Cortana_data-cortana0615.csv
 ;DefaultLoadFile = reg.csv
-AutoStartSubgroupDiscovery = true
+;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
