--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
-;DefaultLoadFile = anvoca_sm_ancova.csv
+DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = Cortana_data-cortana0615.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
 ;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
+AutoExplore = true
