0621 接下來要來處理奇妙的遺失值

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,17 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
-DefaultLoadFile = nomi.csv
-;DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = nomi.csv
+DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
 ;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
-;AutoBrowse = true
+AutoBrowse = true
 ;AutoDistribution = true
 
 [search strategy]
-DefaultNumericStrategy = distribution ; all, bins, best, distribution
+
+; all, bins, best, distribution
+DefaultNumericStrategy = all
