0621 好，解決載入檔案出問題的地方

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
-AutoBrowse = true
+;AutoBrowse = true
 ;AutoDistribution = true
 
 [search strategy]
