--- a/src/config.ini
+++ b/src/config.ini
@@ -1,9 +1,10 @@
 [global]
-RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
+RPath = R
+;DefaultLoadFile = nomi.csv
 ;DefaultLoadFile = anvoca_sm_ancova.csv
-DefaultLoadFile = Cortana_data-cortana0615all.csv
+;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
-AutoStartSubgroupDiscovery = true
+;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
@@ -11,4 +12,5 @@ AutoStartSubgroupDiscovery = true
 ;AutoDistribution = true
 
 [search strategy]
-DefaultNumericStrategy = distribution ; all, bins, best, distribution
+; all, bins, best, distribution
+DefaultNumericStrategy = all
