0621 解決了檔案儲存的問題

--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ;AutoMetaData = true
 ;AutoBrowse = true
 ;AutoDistribution = true
+;AutoStartSubgroupDiscoverySave = true
 
 [search strategy]
 
