0622 初步可以跑？

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
-DefaultLoadFile = nomi.csv
+;DefaultLoadFile = nomi.csv
 ;DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
-AutoStartSubgroupDiscovery = true
+;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
