0622 推測R路徑的功能完成

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [global]
-RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
+;RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
 ;DefaultLoadFile = nomi.csv
 ;DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
