0623 來準備好第二種方法

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [global]
 RPath = D:\\Program Files\\R\\R-3.0.2\\bin\\R.exe
-DefaultLoadFile = nomi.csv
-;DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = nomi.csv
+DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = cortana論文_20180623_4.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
 ;AutoStartSubgroupDiscovery = true
@@ -15,3 +16,4 @@ DefaultLoadFile = nomi.csv
 [search strategy]
 ; all, bins, best, distribution
 DefaultNumericStrategy = all
+MinimumCoverage=0.33
