0623 完了，現在完全不能連線...

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [global]
-RPath = D:\\Program Files\\R\\R-3.0.2\\bin\\R.exe
+RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
 ;DefaultLoadFile = nomi.csv
 DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = cortana論文_20180623_5pic-group~relationship_people.csv
 ;DefaultLoadFile = cortana論文_20180623_4.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
-;AutoStartSubgroupDiscovery = true
+AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
@@ -17,3 +18,4 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ; all, bins, best, distribution
 DefaultNumericStrategy = all
 MinimumCoverage=0.33
+RefinementDepth=1
