--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = cortana論文_20180623_4.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
-AutoStartSubgroupDiscovery = true
+;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
@@ -18,4 +18,4 @@ AutoStartSubgroupDiscovery = true
 ; all, bins, best, distribution
 DefaultNumericStrategy = all
 MinimumCoverage=0.33
-RefinementDepth=1
+RefinementDepth=2
