0624 拆開來，只看ANOVA的系列

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [global]
-RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
 ;DefaultLoadFile = nomi.csv
 DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = anova.csv
 ;DefaultLoadFile = cortana論文_20180623_5pic-group~relationship_people.csv
 ;DefaultLoadFile = cortana論文_20180623_4.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
@@ -13,6 +13,10 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ;AutoBrowse = true
 ;AutoDistribution = true
 ;AutoStartSubgroupDiscoverySave = true
+
+[rserve]
+RPath = D:\\Program Files\\R\\R-3.4.0\\bin\\R.exe
+TaskkillWhenStartup = true
 
 [search strategy]
 ; all, bins, best, distribution
