0626 臺灣價值不足

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = cortana論文_20180623_4.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
+;DefaultLoadFile = cortana論文_20180623_5pair_all.csv
 ;AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
