--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
 ;DefaultLoadFile = reg.csv
 ;DefaultLoadFile = cortana論文_20180623_5pair_all.csv
-;AutoStartSubgroupDiscovery = true
+AutoStartSubgroupDiscovery = true
 ;AutoExit = true
 ;AutoExplore = true
 ;AutoMetaData = true
@@ -23,4 +23,4 @@ TaskkillWhenStartup = true
 ; all, bins, best, distribution
 DefaultNumericStrategy = all
 MinimumCoverage=0.33
-RefinementDepth=2
+RefinementDepth=1
