0626 好啦有存檔了

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [global]
 ;DefaultLoadFile = nomi.csv
-DefaultLoadFile = anvoca_sm_ancova.csv
+;DefaultLoadFile = anvoca_sm_ancova.csv
 ;DefaultLoadFile = anova.csv
 ;DefaultLoadFile = cortana論文_20180623_5pic-group~relationship_people.csv
 ;DefaultLoadFile = cortana論文_20180623_4.csv
 ;DefaultLoadFile = Cortana_data-cortana0615all.csv
-;DefaultLoadFile = reg.csv
+DefaultLoadFile = reg.csv
 ;DefaultLoadFile = cortana論文_20180623_5pair_all.csv
 AutoStartSubgroupDiscovery = true
 ;AutoExit = true
