0626 Distribution的時候，第二個變數沒有標籤

--- a/config.ini
+++ b/config.ini
@@ -21,6 +21,6 @@ TaskkillWhenStartup = true
 
 [search strategy]
 ; all, bins, best, distribution
-DefaultNumericStrategy = all
+DefaultNumericStrategy = distribution
 MinimumCoverage=0.33
-RefinementDepth=1
+RefinementDepth=2
