0608 調整完了，開始準備跑

--- a/config.ini
+++ b/config.ini
@@ -24,4 +24,12 @@ TaskkillWhenStartup = true
 ; all, bins, best, distribution
 DefaultNumericStrategy = all
 MinimumCoverage=0.33
-RefinementDepth=2
+
+; auto or number
+RefinementDepth=3
+
+; auto or number
+SubgroupsMaximun = auto
+
+; auto or number
+SearchTimeMaximum= 0
